k8s/env/dev/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: oliverrr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dev.oliverr.net`)
      kind: Rule
      services:
        - name: oliverrr-frontend-dev
          port: frontend
    - match: Host(`dev-cms.oliverr.net`)
      kind: Rule
      services:
        - name: oliverrr-frontend-dev
          port: backend
  tls:
    certResolver: defaultCertResolver
